# postgresql-anyio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.sh
.github/workflows/: pganyio.yml
pganyio/: __init__.py  _codecs.py  _connection.py  _exceptions.py  _pgmsg.py  _transaction.py  _utils.py
postgresql_anyio/: __init__.py  _connection.py  _cursor.py  _pool.py  _prepared_stmt.py  _text_array.py
tests/: conftest.py  test_codecs.py  test_connect.py  test_connection.py  test_cursor.py  test_pool.py  test_prepared_stmt.py  test_transaction.py
